@@ -22,6 +22,10 @@
    - stevesk@cvs.openbsd.org 2002/07/22 17:32:56
      [monitor.c]
      u_int here; ok provos@
+   - stevesk@cvs.openbsd.org 2002/07/23 16:03:10
+     [sshd.c]
+     utmp_len is unsigned; display error consistent with other options.
+     ok markus@
 
 20020722
  - (bal) AIX tty data limiting patch fix by leigh@solinno.co.uk
@@ -1445,4 +1449,4 @@
  - (stevesk) entropy.c: typo in debug message
  - (djm) ssh-keygen -i needs seeded RNG; report from markus@
 
-$Id: ChangeLog,v 1.2401 2002/07/23 21:13:40 mouring Exp $
+$Id: ChangeLog,v 1.2402 2002/07/23 21:15:13 mouring Exp $
